--- a/.eslintrc
+++ b/.eslintrc
@@ -10,6 +10,9 @@
   },
   "rules": {
       "react/jsx-filename-extension": "off",
-      "import/extensions": "off"
+      "import/extensions": "off",
+      "react/jsx-props-no-spreading": "off",
+      "jsx-a11y/click-events-have-key-events": "off",
+      "jsx-a11y/no-static-element-interactions": "off"
   }
 }
