--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
       # Runs a single command using the runners shell
       - name: build
         run: |
-          yarn install,
+          yarn install
           yarn build
       # Runs a set of commands using the runners shell
       - name: Deploy 🚀
