--- a/.eslintrc
+++ b/.eslintrc
@@ -13,6 +13,7 @@
       "import/extensions": "off",
       "react/jsx-props-no-spreading": "off",
       "jsx-a11y/click-events-have-key-events": "off",
-      "jsx-a11y/no-static-element-interactions": "off"
+      "jsx-a11y/no-static-element-interactions": "off",
+      "no-console": "off"
   }
 }
