--- a/.eslintrc
+++ b/.eslintrc
@@ -2,6 +2,9 @@
   "extends": "airbnb",
   "parser": "@typescript-eslint/parser",
   "plugins": ["@typescript-eslint"],
+  "env": {
+      "browser": true
+  },
   "settings": {
     "import/resolver": {
       "node": {
